# hospital-management

./: .env.example  .gitignore  Hospital_Management_DrawSQL_Full.sql  README.md  agentic.md  config.py  hospital_db.backup  new.py  requirements.txt  run.py
.agents/skills/engineering-standards/: SKILL.md
app/: __init__.py  constants.py  crud_init.py  decorators.py  errors.py  exceptions.py  extensions.py  logging_config.py  utils.py
app/dtos/: inventory.py  laboratory.py  medicine.py  patient.py  prescription.py  report.py  user.py  visit.py
app/mappers/: inventory_mapper.py  laboratory_mapper.py  medicine_mapper.py  patient_mapper.py  prescription_mapper.py  report_mapper.py  user_mapper.py  visit_mapper.py
app/models/: __init__.py  doctor_report.py  inventory.py  inventory_transaction.py  lab_report.py  lab_test_catalog.py  laboratory.py  medicine.py  patient.py  prescription.py  role.py  user.py  user_role.py  visit.py
app/repositories/: __init__.py  base_repository.py  inventory_repository.py  laboratory_repository.py  medicine_repository.py  patient_repository.py  prescription_repository.py  report_repository.py  user_repository.py  visit_repository.py
app/repositories/interfaces/: inventory_repository_interface.py  laboratory_repository_interface.py  medicine_repository_interface.py  patient_repository_interface.py  prescription_repository_interface.py  report_repository_interface.py  user_repository_interface.py  visit_repository_interface.py
app/routes/: __init__.py  auth.py  inventory.py  laboratory.py  main.py  medicines.py  patients.py  prescriptions.py  reports.py  staff.py  visits.py
app/services/: __init__.py  auth_service.py  crud_helper.py  inventory_service.py  laboratory_service.py  medicine_service.py  patient_service.py  prescription_service.py  report_service.py  staff_service.py  visit_service.py
app/services/interfaces/: auth_service_interface.py  inventory_service_interface.py  laboratory_service_interface.py  medicine_service_interface.py  patient_service_interface.py  prescription_service_interface.py  report_service_interface.py  (+2 more)
app/templates/: base.html  dashboard.html  index.html
migrations/versions/: 384f4a2339a1_initial_schema_all_11_tables.py
scratch/: restore_venv.py
scratch/platform-lib/: .gitignore  EVENT_STREAMING_SCALE.md  IMPLEMENTING_ENGINES.md  README.md  find_broken_imports.py  pyproject.toml  usage_examples.md
scratch/platform-lib/tests/: test_core.py
(+32 files in other folders)
