[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hogc-lib"
version = "0.1.0"
description = "Stable kernel: capabilities, types, errors, DI container, context, lifecycle, events."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "HOGC Team" }]
keywords = ["hogc", "dependency-injection", "capabilities", "namespace-package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Keep third-party deps minimal.
# SQLAlchemy is included for the shared Base and async session contracts.
# Redis is intentionally excluded — the concrete client lives in platform-infra.
dependencies = [
    "pydantic>=2.0,<3.0",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/hogc-lib"

# ── Namespace package discovery ────────────────────────────────────────────
# namespaces=true is REQUIRED. Without it, hogc/ gets an __init__.py
# and breaks every other hogc-* package's namespace contributions.
[tool.setuptools.packages.find]
where      = ["src"]
namespaces = true

[tool.setuptools.package-data]
"hogc.lib" = ["py.typed"]

# ── import-linter: hogc-lib must never import engines ──────────────────
[tool.importlinter]
root_packages = ["hogc.lib"]

[[tool.importlinter.contracts]]
name    = "hogc-lib must not import engines"
type    = "forbidden"
source_modules   = ["hogc.lib"]
forbidden_modules = ["hogc.engines"]

# ── Type checking ──────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = true
namespace_packages     = true
explicit_package_bases = true
mypy_path              = "src"

# ── Linting ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
select         = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --tb=short"
